Animating Perspective View

--- a/MotionUIControls/Base.lproj/Main_iPhone.storyboard
+++ b/MotionUIControls/Base.lproj/Main_iPhone.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="YlB-YP-PfF" userLabel="Parallax View" customClass="MTZPerspectiveView">
+                            <view contentMode="scaleToFill" id="YlB-YP-PfF" customClass="MTZPerspectiveView">
                                 <rect key="frame" x="64" y="140" width="192" height="288"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -31,6 +31,9 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="perspectiveView" destination="YlB-YP-PfF" id="ksR-BW-MYS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
