--- a/MotionUIControls/Base.lproj/Main_iPad.storyboard
+++ b/MotionUIControls/Base.lproj/Main_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5051" systemVersion="13C32" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5051" systemVersion="13C32" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -8,19 +8,23 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="MTZViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9qq-be-O71"/>
+                        <viewControllerLayoutGuide type="bottom" id="xXs-xZ-xMI"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="wNB-kl-Xri" userLabel="Parallax View" customClass="MTZPerspectiveView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wNB-kl-Xri" customClass="MTZPerspectiveView">
                                 <rect key="frame" x="352" y="100" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="itu-wv-aAg" userLabel="Slider">
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="itu-wv-aAg" userLabel="Slider">
                                         <rect key="frame" x="32" y="104" width="256" height="31"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     </slider>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="XHS-j9-KY7" userLabel="Slider + Motion" customClass="MTZSlider">
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="XHS-j9-KY7" userLabel="Slider + Motion" customClass="MTZSlider">
                                         <rect key="frame" x="32" y="154" width="256" height="31"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     </slider>
@@ -29,9 +33,18 @@
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wNB-kl-Xri" firstAttribute="top" secondItem="9qq-be-O71" secondAttribute="bottom" constant="80" id="DDz-JO-A8w"/>
+                            <constraint firstItem="wNB-kl-Xri" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bVc-kJ-Qeh"/>
+                            <constraint firstItem="wNB-kl-Xri" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="352" id="hEl-NR-W1h"/>
+                            <constraint firstItem="wNB-kl-Xri" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="l5G-1D-gUO"/>
+                        </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <connections>
+                        <outlet property="perspectiveView" destination="wNB-kl-Xri" id="e8P-S2-QaB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
